# pybundler

./: .gitignore  .goreleaser.yaml  .tool-versions  README.md  go.mod  go.sum  main.go
.github/workflows/: on-pr.yml  release-snapshot.yml  release.yml
cmd/: bundle.go  root.go
examples/any-script/: pyproject.toml
examples/any-script/src/any_script/: __init__.py  entry.py  entry_other.py
examples/basic/: pyproject.toml
examples/fastapi-app/: Dockerfile  pyproject.toml
examples/fastapi-app/src/fastapi_app/: main.py
examples/typer-cli/: pyproject.toml
examples/typer-cli/src/typer_cli/: __init__.py
internal/bundle/: bundle.go  bundle_test.go  command.go  command_collection.go  options.go  pyproject.go  renderer.go  run.go  run_test.go  template.go  utils.go
internal/bundle/templates/: command-group.go.tmpl  command.go.tmpl  dockerfile.go.tmpl  dockerfile.tmpl  generate.go.tmpl  main.go.tmpl  root-with-commands.go.tmpl  root.go.tmpl
internal/tmpl/: main.go
internal/tmpl/templates/: generate.go.tmpl  main.go.tmpl  root.go.tmpl
internal/types/: pyproject.go
