[project]
name = "any-script"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Jens Peder Meldgaard", email = "jenspederm@gmail.com" }]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
any-script = "any_script:main"

[project.gui-scripts]
any-script-gui = "any_script.gui:main"

[project.entry-points."my-entry"]
any-script = "any_script.entry:main"

[project.entry-points."other"]
any-script = "any_script.entry_other:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
