[project]
name = "basic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Jens Peder Meldgaard", email = "jenspederm@gmail.com" }]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
basic = "basic:main"
cli = "basic.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
