[project]
name = "fastapi-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jens Peder Meldgaard", email = "jenspederm@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.0",
]

[project.scripts]
serve = "fastapi_app.main:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
